--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "puppeteer": "^24.9.0",
+    "puppeteer-core": "^24.9.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
